# DPA

./: CSVReader.py  Dockerfile  README.MD  __main__.py  algorithms.py  crud.py  data.csv  database.py  docker-compose.yml  generate_data.py  main.py  models.py  pyproject.toml  schemas.py  start-web.sh  test.py  utils.py
common/: model_fields.py  models.py  views.py
config/: settings.py  urls.py
payment/: models.py
payment/api/: serializers.py  urls.py  views.py
payment/migrations/: 0001_initial.py
taxi/: models.py
taxi/api/: serializers.py  urls.py  views.py
taxi/migrations/: 0001_initial.py
user/: models.py
user/api/: serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_user_managers.py
